fix: Add support for RSA keys in Decentralized Identity modules (#3206)